adjust landing head_logo top spacing to avoid tickets button disappearing in smaller screens

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -51,7 +51,7 @@
 }
 #head_logo img{
   height:250px;
-  margin-top:20px;
+  margin-top:5%;
 }
 .speakers-container{
   .container.sinfo{
